Resolve issue #18
https://github.com/ingv-oe-dev/tsdsystem/issues/18
